# edie-public

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Conanfile.txt  README.md  conanfile.py  conanfile.txt
.github/workflows/: build.yml  edie.yml
cmake/: conan.cmake  conan_provider.cmake
examples/novatel/command_encoding/: CMakeLists.txt  command_encoding.cpp
examples/novatel/converter_components/: CMakeLists.txt  converter_components.cpp
examples/novatel/converter_fileparser/: CMakeLists.txt  converter_fileparser.cpp
examples/novatel/converter_parser/: CMakeLists.txt  converter_parser.cpp
examples/novatel/dynamic_components/: dynamic_components.cpp
examples/novatel/dynamic_fileparser/: dynamic_fileparser.cpp
examples/novatel/dynamic_parser/: dynamic_parser.cpp
examples/novatel/json_parser/: CMakeLists.txt  json_parser.cpp
examples/novatel/rangecmp/: CMakeLists.txt  range_decompressor_example.cpp
examples/novatel/rxconfig/: CMakeLists.txt  rxconfig_example.cpp
lib/logger/: logger.hpp
src/: version.h.in
src/decoders/: CMakeLists.txt
src/decoders/common/api/: crc32.hpp  framerinterface.hpp  jsonreader.hpp  logger.hpp  message_decoder.hpp
src/decoders/common/src/: message_decoder.cpp
src/decoders/common/test/: CMakeLists.txt  jsonreaderunittest.cpp  main.cpp
src/decoders/dynamic_library/: CMakeLists.txt
src/decoders/dynamic_library/api/: novatel_encoder.hpp  novatel_fileparser.hpp  novatel_header_decoder.hpp  novatel_message_decoder.hpp  novatel_parser.hpp
src/decoders/dynamic_library/src/: common_logger.cpp
src/decoders/novatel/api/: commander.hpp  encoder.hpp  fileparser.hpp  filter.hpp  header_decoder.hpp  parser.hpp
src/decoders/novatel/src/: fileparser.cpp  filter.cpp
src/decoders/novatel/src/rangecmp/: range_decompressor.cpp
src/decoders/novatel/src/rxconfig/: rxconfig_handler.cpp
src/decoders/novatel/test/: CMakeLists.txt  main.cpp  novateltest.cpp  rangecmptest.cpp  rxconfigtest.cpp
src/hw_interface/: CMakeLists.txt
src/hw_interface/stream_interface/api/: inputmemorystream.hpp  outputmemorystream.hpp
src/hw_interface/stream_interface/src/: filestream.cpp  multioutputfilestream.cpp
src/hw_interface/stream_interface/test/: filestreamunittest.cpp  inputfilestreamunittest.cpp  main.cpp  outputfilestreamunittest.cpp
